# django-chat-api

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
chat/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_messageattachment_attachment_and_more.py
config/: settings.py  urls.py
socket_service/: Dockerfile  docker-compose.yml  index.js  package.json
socket_service/client/: index.html
users/: admin.py  authentication.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_jwt.py  0003_userprofile.py  0004_customuser_is_online.py
